@@ -36,6 +36,7 @@ public class DateInterpreterStorage extends AbstractInterpreterStorage {
         register("dos_date_time", DosDateTimeInterpreter.class);
         register("win_file_time", WindowsFileTimeInterpreter.class);
         register("win_system_time", WindowsSystemTimeInterpreter.class);
+        register("win_ole_date", WindowsOleDateInterpreter.class);
     }
 
     public List<InterpreterInfo> getInterpreterInfos() {
@@ -45,7 +46,8 @@ public class DateInterpreterStorage extends AbstractInterpreterStorage {
                              new DosTimeInterpreterInfo(),
                              new DosDateTimeInterpreterInfo(),
                              new WindowsFileTimeInterpreterInfo(),
-                             new WindowsSystemTimeInterpreterInfo());
+                             new WindowsSystemTimeInterpreterInfo(),
+                             new WindowsOleDateInterpreterInfo());
     }
 
 }
