@@ -4,6 +4,7 @@ Version X.X (XXXX-XX-XX)
      New: DateInterpreterStorage for storage and retrieval of date interpreters.
      New: Added interpreter for Windows NT FILETIME.
      New: Added interpreter for Windows NT SYSTEMTIME.
+     New: Added interpreter for Windows OLE VT_DATE / PT_APPTIME.
 
 Version 0.4 (2013-12-01)
 
